--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -956,8 +956,8 @@ tr.tr-blank{
     text-decoration:underline;
 }
 #outer-autosuggest-menu{
-float: left;
-margin-left: 130px;
+float: right;
+margin-right: 94px;
 margin-top: 6px;
 width: 245px;
 }
