sreeshanth(auto suggest menu  placeholder translation)
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@1344 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/layouts/_autosuggest_menu.html.erb
+++ b/app/views/layouts/_autosuggest_menu.html.erb
@@ -51,5 +51,5 @@
 </script>
 
 
-<%= text_field_tag :autosuggest_menu,{} ,:id=>'autosuggest_menu_input',:placeholder => 'Search Actions,Events and People' %>
+<%= text_field_tag :autosuggest_menu,{} ,:id=>'autosuggest_menu_input',:placeholder => "#{t('autosuggest_menu.search_actions_and_events')}" %>
 
