--- a/public/stylesheets/finance/fees_student_dates.css
+++ b/public/stylesheets/finance/fees_student_dates.css
@@ -85,6 +85,7 @@
     font-family: arial;
     cursor:pointer;
     margin: 18px 0 0;
+    margin-right:10px;
 }
 .submit_button:hover{
     background:  #373B3F;
@@ -140,8 +141,11 @@
     font-family: arial;
     font-size: 14px;
     font-weight: bold;
+    margin-left: 15px;
     padding: 6px 8px;
+    width: 87px;
 }
+
 .label-field-pair1 .submit_button2:hover {
     background: none repeat scroll 0 0 #373B3F;
 }
@@ -157,7 +161,7 @@
 
 
 .fine_info{
-     float: right;
+    float: right;
     height: 50px;
     overflow: hidden;
     width: auto;
@@ -242,13 +246,13 @@ table#listing td a:hover{
 
 
 td span{
-   color: #990A10;
+    color: #990A10;
 }
 
 table#listing td.col-8 {
-    padding: 5px 5px 5px 10px;
-    width: 10%;
+    padding: 5px 15px 5px 10px;
     text-align: right;
+    width: 10%;
 }
 
 .pay_fees_buttons{
