--- a/public/stylesheets/finance/pay_fees_defaulters.css
+++ b/public/stylesheets/finance/pay_fees_defaulters.css
@@ -280,3 +280,13 @@ table#listing td a:hover {
     float: right;
     margin-top: 15px;
 }
+
+table#listing td.col-6 {
+    width: 15%;
+}
+
+table#listing td.col-2 {
+    padding: 5px 5px 5px 10px;
+    text-align: left;
+    width: 70%;
+}
