sreeshanth(style and flash msg issue)
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@1347 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/finance/additional_fees_create_form.html.erb
+++ b/app/views/finance/additional_fees_create_form.html.erb
@@ -40,7 +40,7 @@
     <div class="input-container"><%= form.text_field :description %></div>
    </div>
        <div class="label-field-pair">
-    <div class="label-container"><label><%= t('batch') %> : </label></div>
+    <div class="label-container"><label><%= t('batch') %> <span class="necessary-field">*</span> : </label></div>
     <div class="input-container"><%= form.select :batch_id, @batches.map { |c| [c.full_name, c.id] },:prompt => "#{t('select_batch')}"  %></div>
    </div>
        <div class="label-field-pair">
