--- a/public/stylesheets/rtl/finance/pay_fees_defaulters.css
+++ b/public/stylesheets/rtl/finance/pay_fees_defaulters.css
@@ -280,3 +280,13 @@ table#listing td a:hover {
     float: left;
     margin-top: 15px;
 }
+
+table#listing td.col-6 {
+    width: 15%;
+}
+
+table#listing td.col-2 {
+    padding: 5px 10px 5px 5px;
+    text-align: right;
+    width: 70%;
+}
