--- a/app/views/student/electives.html.erb
+++ b/app/views/student/electives.html.erb
@@ -27,6 +27,7 @@
 </div>
 
 <div id="page-yield">
+  <div id="flash_box"></div>
   <% unless flash[:notice].nil? %>
   <p class="flash-msg"> <%= flash[:notice] %> </p>
 <% end %>
