sreeshanth(style issue)
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@1352 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/public/stylesheets/rtl/student_attendance/student.css
+++ b/public/stylesheets/rtl/student_attendance/student.css
@@ -1,7 +1,7 @@
 
 .submit_button {
     margin-top:25px;
-    margin-right:210px;
+    margin-right:477px;
     padding: 7px 10px;
     color: #fff;
     background: #27292B;
@@ -66,4 +66,7 @@
 .errorExplanation p{
     font-size: 13px;
     text-align: center;
+}
+.label-field-pair {
+    margin-left: 265px;
 }
