Autosuggest menu * Search employee to search present employees only * Limit suggestions by 10
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@1353 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/layouts/_autosuggest_menu.html.erb
+++ b/app/views/layouts/_autosuggest_menu.html.erb
@@ -28,14 +28,14 @@
   searchoptions = function (request,response){
     var query=request.term;
     var available_options = <%= autosuggest_menuitems %>;
-    var options = jQuery.ui.autocomplete.filter(available_options,query)
+    var options = jQuery.ui.autocomplete.filter(available_options,query).slice(0,11);
     options.push({'menutype': 'action',
       'label' : '<%=t('autosuggest_menu.search_students')%> : <strong>'+query+'</strong>',
       'value' : "/student/advanced_search?search%5Border%5D=&search%5Bfirst_name_or_middle_name_or_last_name_like%5D="+query+"&search%5Badmission_no_equals%5D=&advv_search%5Bcourse_id%5D=&search%5Bbatch_id_equals%5D=&search%5Bstudent_category_id_equals%5D=&search%5Bgender_equals%5D=&search%5Bblood_group_like%5D=&search%5Bnationality_id_equals%5D=&advv_search%5Bdoa_option%5D=&advv_search%5Bdoa_year%5D=&advv_search%5Bdob_option%5D=&advv_search%5Bdob_year%5D=&commit=Search"})
 
     options.push({'menutype': 'action',
       'label' : '<%=t('autosuggest_menu.search_employees')%>: <strong>'+query+'</strong>',
-      'value' : "/employee/advanced_search?search%5Border%5D=&search%5Bfirst_name_or_middle_name_or_last_name_like%5D="+query+"&search%5Bemployee_number_equals%5D=&search%5Bgender_equals%5D=&search%5Bblood_group_like%5D=&search%5Bmarital_status_like%5D=&search%5Bnationality_id_equals%5D=&search%5Bemployee_category_id_equals%5D=&search%5Bemployee_department_id_equals%5D=&search%5Bemployee_position_id_equals%5D=&search%5Bemployee_grade_id_equals%5D=&adv_search%5Bdoj_option%5D=&adv_search%5Bdoj_year%5D=&adv_search%5Bdob_option%5D=&adv_search%5Bdob_year%5D=&search%5Bstatus_equals%5D=&commit=Search"})
+      'value' : "/employee/advanced_search?search%5Border%5D=&search%5Bfirst_name_or_middle_name_or_last_name_like%5D="+query+"&search%5Bemployee_number_equals%5D=&search%5Bgender_equals%5D=&search%5Bblood_group_like%5D=&search%5Bmarital_status_like%5D=&search%5Bnationality_id_equals%5D=&search%5Bemployee_category_id_equals%5D=&search%5Bemployee_department_id_equals%5D=&search%5Bemployee_position_id_equals%5D=&search%5Bemployee_grade_id_equals%5D=&adv_search%5Bdoj_option%5D=&adv_search%5Bdoj_year%5D=&adv_search%5Bdob_option%5D=&adv_search%5Bdob_year%5D=&search%5Bstatus_equals%5D=true&commit=Search"})
 
     response(options)
   }
