grading level acess bug fix #1353
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@1359 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/courses/manage_batches.html.erb
+++ b/app/views/courses/manage_batches.html.erb
@@ -28,7 +28,9 @@
 
 <div id="inner-tab-menu">
   <ul>
+    <% if permitted_to? :index ,:grading_levels %>
     <li><%= link_to "#{t('grading_system')}", grading_levels_path %></li>
+    <% end %>
     <li><%= link_to "#{t('batch_transfer')}", :controller => 'batch_transfers' %></li>
   </ul>
 </div>
