--- a/public/stylesheets/rtl/elective_groups/create.css
+++ b/public/stylesheets/rtl/elective_groups/create.css
@@ -1,6 +1,6 @@
 .submit_button {
     margin-top:20px;
-    margin-right:180px;
+    margin-right:96px;
     padding: 7px 10px;
     color: #fff;
     background: #27292B;
@@ -29,4 +29,7 @@
     margin:20px 0;
     padding:10px 20px 20px 0;
     width:510px;
+}
+.label-field-pair label {
+    width: 85px;
 }
