[debanjan] finance category options brought to left and rtl changes
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@1362 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/finance/_category_list.html.erb
+++ b/app/views/finance/_category_list.html.erb
@@ -27,16 +27,18 @@
 <% @other_categories.each do |cat| %>
   <div class="container<%= cycle('odd', 'even')%> ">
     <div class="title"> <%= cat.name %></div>
+    <div class="options">
       <div class="edit"><%= link_to_remote t('edit_text'), :url => { :action => 'category_edit', :id => cat.id } %></div>
       <div class="edit">
         <% transaction = FinanceTransaction.find(:all, :conditions=>{:category_id=>cat.id}) %>
         <% if transaction.blank? %>
-        <%= link_to_remote t('delete_text'), :url => { :action => 'category_delete', :id => cat.id } , :confirm=>"#{t('are_you_sure_to_delete')}" %>
+          <%= link_to_remote t('delete_text'), :url => { :action => 'category_delete', :id => cat.id } , :confirm=>"#{t('are_you_sure_to_delete')}" %>
         <% else %>
 
-        <%= link_to_remote "<s>#{t('delete_text')}</s>", :url => { :action => '', :id => "" } %>
-          <% end %>
+          <%= link_to_remote "<s>#{t('delete_text')}</s>", :url => { :action => '', :id => "" } %>
+        <% end %>
       </div>
+    </div>
   </div>
 <% end %>
 <div id="modal-box" style="display:none;"></div>
