cource acess from grading_level bug fix #1319
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@1364 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/grading_levels/index.html.erb
+++ b/app/views/grading_levels/index.html.erb
@@ -26,9 +26,11 @@
   </div>
 </div>
 <div id="inner-tab-menu">
+  <% if permitted_to? :index, :course %>
   <ul>
     <li><%= link_to t('course_text'), courses_path %></li>
   </ul>
+  <% end %>
 </div>
 <div id="page-yield">
   <div id="flash_box">
