fixed date bug in payslip generation #1460
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@1365 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/employee/create_monthly_payslip.erb
+++ b/app/views/employee/create_monthly_payslip.erb
@@ -43,6 +43,9 @@
   <% unless flash[:notice].nil? %>
     <p class="flash-msg"> <%= flash[:notice] %> </p>
   <% end %>
+  <% unless flash[:warn_notice].nil? %>
+    <div id="errorExplanation" class="errorExplanation"><%= flash[:warn_notice] %> </div>
+  <% end %>
   <div id="form-content">
     <% form_for :manage_payroll do |s| %>
 
