--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -59,9 +59,8 @@
         <div id="outer-header-link">
           <div id="header_link" >
             <%= t('logged_as') %>
-            <% this_user = User.find(session[:user_id]) if session[:user_id] %>
-            <%= link_to this_user.first_name, :controller => 'user', :action => 'profile',
-              :id => this_user.username %> &nbsp;|&nbsp;
+            <%= link_to @current_user.first_name, :controller => 'user', :action => 'profile',
+              :id => @current_user.username %> &nbsp;|&nbsp;
             <%= link_to t('messages'),:controller => "reminder", :action => "index" %>(<%= render :partial => 'layouts/reminder_count' %>)&nbsp;|&nbsp;
             <%= link_to t('log_out'), :controller => 'user', :action => 'logout' %>  &nbsp;&nbsp;
           </div>
